css/style.css
/* ... */
@media screen and (max-width: 736px) {

    #main > * {
        padding: 2rem 2rem 0.1rem 2rem ;
    }

}

@media screen and (max-width: 480px) {

    #main {
        width: 100%;
        /*
        height: 100vh;
        */
    }

}

